# systole

./: .copier-answers.yml  .gitattributes  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  PLAN  README.md  ROADMAP.md  manifest  noxfile.py  paths.example.yaml  pyproject.toml  reference.example.yaml  requirements.txt  sgconfig.yml  whitelist.py
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: audit.yml  ci.yml  pages.yml
baselines/nnunet/: MODEL_CARD.md  README.md  convert.py  env.sh  results.json  run_battery.sh  score.py
cardioseg/: MODEL_CARD.md  README.md  RESULTS.json  config.py  hparams.py  modelcard.py  obs.py  pipeline.py  tracking.py  types.py
cardioseg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cardioseg/analysis/: eda.py
cardioseg/data/: generator.py  geo.py  inventory.py  mri_physics.py  priors.py  splits.py  store.py  synth.py
cardioseg/evaluation/: __main__.py  attribution.py  calibrate.py  distribution.py  ef_calibrate.py  ensemble.py  evaluate.py  losses.py  matrix.py  measure.py  modelcard.py  overlay.py  postprocess.py  results.py  rv_omission.py  soft_eval.py  sync_numbers.py  synth_fidelity.py  uncertainty.py  validate.py
cardioseg/normalization/: README.md  __init__.py  fetch_sources.sh  n4.py  persist.py
cardioseg/preprocessing/: preprocess.py
cardioseg/training/: augment.py  dataset.py  earlystop.py  ef_lane.py  export_onnx.py  generator.py  losses.py  model.py  synth.py  train.py  volumes.py
cardioview/: README.md  common.py  export_onnx.py  export_web.py  geometry.py  render_overlay.py  render_volume.py
cardioview/tests/: conftest.py  test_geometry.py  test_pipeline_chain.py  test_render_overlay.py  test_render_volume.py
cardioview/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
core/: __init__.py  config.py  evaluate.py  export.py  export_onnx.py  hparams.py  inference.py  labels.py  losses.py  measure.py  mesh.py  model.py  obs.py  paths.py  postprocess.py  reference.py  registry.py  run.py  shapecheck.py  types.py
core/data/: __main__.py  source.py  split.py  splits.py  store.py  testsets.lock.json  testsets.py
core/preprocessing/: __init__.py  n4.py  nyul.py  preprocess.py
devtools/: README.md  __init__.py  _common.py  analytics.py  data_clumps.py  graph.py  jscpd.json  lcom.py  magic_literals.py  omit.py  sgconfig.yml  shape_contracts.py  state_candidates.py
devtools/sg-rules/: py-top-level-function.yml  py-top-level-side-effect.yml
docs/: PLAN.md  ROADMAP.md  STRUCTURE.md
docs/architecture/: graph.json
interpretations/converging/: 2026-07-16_repaint_failure_tax_verdict.md  2026-07-16_twin_tissue_identifiability.md  2026-07-16_what_is_wrong_with_our_synth.md  2026-07-16_zero_real_ceiling_lit_grounded.md  2026-07-17_directed_synth_da.md  2026-07-17_mrxcat_fulluse_gate.md  2026-07-18_scarcity_signal_test.md  synth_directions_map.md
interpretations/ef/: 2026-07-15_ef_defensibility.md
interpretations/synth/: 2026-07-15_correct_synth_composition_dent.md  2026-07-15_dprime_dice_proxy_verdict.md  2026-07-15_myo_separability_artifact.md  2026-07-15_over_separation_physical_attribution.md  2026-07-15_trabecular_pv_blood_mean.md  2026-07-15_within_class_spread_structural.md  2026-07-16_color_gap_spectrum_irreducible.md  2026-07-16_color_gap_spectrum_randomization_tax.md  2026-07-16_zeroreal_gap_is_rv_myo_color_collapse.md
learning/: 2026-06-17_mri-ef-foundation.md  2026-06-18_evaluation.md  2026-06-18_geometry-volumetry.md  2026-06-18_ml-segmentation.md  README.md  glossary.md
learning/materials/: CHANGELOG.md  field-map.md
mri-sim/: README.md  ROADMAP.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mri-sim/scripts/: render-smoke.mjs  shoot.mjs
mri-sim/src/: main.ts  vtk-shim.d.ts
mri-sim/tests/: README.md
research/: NOTICE_BOARD.md  README.md  diversity_factors.md
research/deep_dives/: 2026-06-17_application-curriculum-and-gaps.md  2026-06-17_cardiac-mri-ef-foundations.md  2026-06-17_orientation_resources.md  2026-06-18_ml-geometry-application-curriculum.md  2026-06-20_dataset-acquisition-and-conventions.md  2026-06-21_ef-bias-mechanism-esv-overseg.md  2026-06-21_intensity-normalization-and-harmonization.md  2026-06-22_cardiac-segmentation-oss-landscape-unified.md  2026-06-24_mri-sim-libs-eval.md  2026-06-29_soft-labels-calibration-vs-ef.md  2026-06-30_cardiosam_triage.md  2026-06-30_synth-fidelity-investigation.md  2026-07-01_cardiac-anatomy-generation-sota.md  2026-07-01_mri-vendor-acquisition-params.md  2026-07-03_parametric-mri-generation.md  2026-07-08_tissue_relaxation_ranges.md  2026-07-13_type-checker-eval.md  2026-07-15_cardiac_bssfp_snr.md  2026-07-15_papillary_trabecular_volume_fractions.md  2026-07-15_synth_seg_sim2real_overcleanliness.md  2026-07-16_synth_only_cardiac_ceiling.md
scripts/: _freeze_manifests.py  fetch_mrxcat2.sh  make_overlay.py  sync_numbers.py
src/: data.py  evaluate.py  measure.py  synth.py  train.py
src/core/: model.py  viz.py
src/training/: train.py
tests/: README.md  conftest.py  test_smoke.py
tests/cardioview/: conftest.py  test_common.py  test_export_web.py  test_geometry.py  test_render_overlay.py
tests/e2e/: test_entrypoint_smoke.py  test_train_pipeline.py
tests/integration/: test_pipeline_chain.py  test_smoke.py  test_split_source_gen.py  test_synth_golden.py
tests/unit/: test_anatomy.py  test_attribution.py  test_augment.py  test_base_helpers.py  test_calibrate.py  test_cmrxmotion.py  test_config_ssot.py  test_dataset.py  test_devtools_graph.py  test_distribution.py  test_ef_lane.py  test_ensemble.py  test_generator.py  test_geo.py  test_geometry_metrics.py  test_hparams.py  test_inference.py  test_inverse.py  test_kaggle_dsb.py  test_labels.py  test_losses.py  test_manifest.py  test_matrix.py  test_mesh.py  test_mnm2.py  test_modelcard.py  test_mrxcat.py  test_n4.py  test_nyul.py  test_paths.py  test_persist.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_reference.py  test_splits.py  (+14 more)
(+281 files in other folders)
