[project]
name = "cardioseg"
version = "0.1.0"
description = "Cardiac segmentation + function (ejection fraction) across MRI/CT/echo, honestly evaluated."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "nibabel",
    "matplotlib",
    "tqdm",
    "polars",      # the data store + splits (cardioseg/data/{store,splits}.py) — REQUIRED for training
    "pydantic>=2",  # validated hyperparameter configs (cardioseg/hparams.py)
    "omegaconf",   # paths.yaml config loader (cardioseg/config.py)
    "monai>=1.5",
    # torch >=2.7 required for NVIDIA Blackwell (sm_120, RTX 5090). The CUDA build comes from the
    # PyTorch index (see [tool.uv.sources] below), NOT plain PyPI (which is CPU). Verified: 2.10+cu130.
    "torch>=2.7",
    # Promoted from extras (2026-07-07): imported at module top, NOT lazy. Everything here runs in the
    # normal train/eval/export flow; there's no light non-torch consumer to protect, so lazy imports
    # were just laziness. Only the GPU lane (cupy/cucim) stays optional — it's platform-conditional.
    "SimpleITK",                     # N4 + DICOM I/O (preprocessing/n4, data/static/mri/dicom)
    "onnx", "onnxruntime",           # ONNX export + argmax parity (core/export_onnx; cardioview handoff)
    "pyvista",                       # 3D mesh/volume render (core/mesh, data/dynamic/{anatomy,mrxcat})
    "mlflow", "psutil", "pynvml",    # experiment tracking + model registry (the store); psutil/pynvml = system metrics
    "captum",                        # attribution saliency diagnostic (data/analysis/attribution)
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
devtools = ["grimp", "networkx"]   # import-graph architecture diagnostic (devtools/graph.py, bd au0o)
nnunet = ["nnunetv2>=2.5"]   # external SOTA baseline (baselines/nnunet), own env — never a core dep
mrxcat = ["opencv-python-headless"]   # OFFLINE tooling: the vendored MRXCAT2.0 warper (external/mrxcat2); NOT a runtime dep — we consume its output masks and paint with our own engine
# GPU lane — the ONE genuinely-optional runtime dep: LINUX-only (cupy/cucim ship no Windows wheels).
# The code branches on availability (single capability gate), scipy/CPU fallback on Windows. Install
# on linux with `uv sync --extra gpu`.
gpu = ["cupy-cuda13x; sys_platform == 'linux'", "cucim-cu13; sys_platform == 'linux'"]
all = ["nnunetv2>=2.5", "opencv-python-headless", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]          # repo root importable -> top-level devtools/ (dev tooling, not a shipped package)
# tests/unit/ MIRRORS the source tree (bd cardiac-seg-h7vy.1) -> same-named test modules in different
# dirs (two test_pipeline_chain.py). importlib import mode resolves those by path (the default 'prepend'
# needs unique basenames + __init__ packages, which a mirror breaks).
addopts = "--import-mode=importlib"

# Architecture fitness thresholds (devtools/graph.py --assert, bd cardiac-seg-g0b2) — the METRIC arch
# axis import-linter's categorical contracts can't express. BLOCKING rules start clean and ratchet:
# god-module (fan-in AND fan-out both > bottleneck_degree), file > file_max, any import cycle. ADVISORY
# (never blocks): betweenness > betweenness_max (noisy).
[tool.structure]
bottleneck_degree = 8       # a module with BOTH fan-in and fan-out over this is a god-module (0 today)
file_max = 750              # god-file ceiling (largest today ~548)
file_min = 0                # OFF (owner decision): no honest floor exists — the small files are SSOT /
#                             strategy-entry / shared-vocab leaves (geo.py 13, types.py 28, one-file-per-
#                             split), which the repo's own principles produce; a floor would flag legit
#                             leaves and miss real "too-thin" modules (a responsibility judgment, not lines).
betweenness_max = 0.10      # advisory chokepoint threshold (max today ~0.04)

# Ruff: format + lint. Curated rule set (decided rule-by-rule, not `select = ["ALL"]`) — the goal is
# catching drift (magic constants, sprawling ifs, dead code, lazy imports), NOT enforcing a house
# style. Escape hatch is per-line `# noqa: <code>`, used sparingly. `ty`/type-checking is a separate,
# later axis (bd rp8l).
[tool.ruff]
line-length = 120
extend-exclude = ["baselines", "cardioview/web/node_modules", "cardioview/web/dist", "mri-sim", ".staging", "runs"]

[tool.ruff.lint]
select = [
    "F",        # pyflakes — unused imports/vars, undefined names (real bugs)
    "B",        # bugbear — likely bugs (mutable defaults, raise-without-from, zip-without-strict)
    "E501",     # line-too-long only (NOT E701/E702 — the `a; b` / `if x: y` compaction stays)
    "I",        # isort — import ordering (autofix)
    "T201",     # print — logging is the rule
    "FBT",      # boolean-trap — bools must be keyword-only (f(amp=True), def f(*, amp=...))
    "BLE001",   # blind except — broad `except Exception` swallows real bugs
    "S110",     # try-except-pass — silent swallow (worse than BLE)
    "C901",     # mccabe complexity — enforces the low-ifs / strategy-pattern rule
    "PLR0912",  # too-many-branches — same
    "PLR0913",  # too-many-arguments — nudges toward config objects (the repo's pattern)
    "PLR0915",  # too-many-statements — split it
    "PLR2004",  # magic-value-comparison — name the constant
    "PLC0415",  # import-outside-top-level — imports go to the top (optional deps: top-level try/except)
    "RUF100",   # unused-noqa — a noqa that suppresses nothing (stale after a fix) gets removed
]
# OFF by decision: D* (docstrings not mandated), ANN* (annotations = the deferred type axis), N*
# (ML convention: capital X/Y/N tensors), RUF001-003 (our → × λ math unicode is intentional; RUF100 ON),
# E701/E702
# (compaction kept), TRY/EM/SIM/UP (opinionated churn), NPY002 (legacy np.random KEPT — modernizing to
# Generator changes the RNG stream, breaking seed-comparability with existing runs).

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]              # re-exports are intentional (the package's public surface)
"**/tests/**" = ["PLR2004", "FBT"]    # literal fixtures + bool test flags are fine in tests
"cardioseg/tracking.py" = ["S110", "BLE001"]  # best-effort telemetry: mlflow errors must never break training

# Vulture: dead-code (functions/classes/attrs) — the axis ruff can't see. Scans core+cardioseg ONLY
# (NOT tests): a prod symbol referenced solely by a test then surfaces as dead here, instead of being
# masked by its test fan-in (the trap that fools both vulture and coverage). CI runs two tiers —
# conf>=80 blocks (near-certain: redundant conditions, unused locals), conf>=60 warns (dead funcs, but
# eats entry-point/no-fan-in false positives). ignore_names/decorators kill the pydantic FPs (a
# ClassVar `model_config` + validator methods look unused but are framework-called). bd cardiac-seg-5ogp.
[tool.vulture]
paths = ["core", "cardioseg", "cardioview"]
exclude = ["baselines", "*/node_modules/*", "cardioview/web/dist", "mri-sim", ".staging", "runs"]
min_confidence = 60
ignore_names = ["model_config", "azimuth", "elevation", "BG", "ED", "ES"]  # framework-structural FPs vulture can't see used: pydantic model_config; pyvista Camera setters azimuth/elevation; Label enum member BG (read via enum iteration); PatientData TypedDict fields ED/ES (accessed by string key)
ignore_decorators = ["@model_validator", "@field_validator", "@field_serializer", "@model_serializer", "@computed_field"]

# Coverage (pytest-cov). Measures core+cardioseg. The denominator is LIBRARY logic, not scripts: omit
# the exploratory analysis CLIs + offline builders + the onnx export (no import fan-in, need raw data
# on disk — counting them just drags the % with code that isn't unit-testable). Data ADAPTERS stay in
# (low coverage there is honest signal to close, not noise to hide). exclude_lines drops the __main__
# entry blocks + protocol stubs from the count. Gate is ADVISORY (CI prints, never fails) until a
# baseline floor is set + ratcheted. bd cardiac-seg-emko.
# cardioview is measured SEPARATELY (not in this source list): the CI cardioview step runs
# `pytest cardioview/tests --cov=cardioview` into its own .coverage.cardioview and prints it advisory,
# so the >=80 core+cardioseg floor stays calibrated to LIBRARY logic and isn't moved by the viewer's
# render/onnx shells (all pragma'd). bd cardiac-seg-3vbc.
[tool.coverage.run]
source = ["core", "cardioseg"]
omit = ["*/data/analysis/*", "*_build.py", "core/export_onnx.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
]

# import-linter (grimp engine): the dependency rule as a STATIC import-graph contract, not prose. core is
# the shared kernel — it must import NEITHER trainer (cardioseg) NOR viewer (cardioview); the viewer
# depends only on core. CI fails the day a new upward edge lands. bd cardiac-seg-dsz2.
[tool.importlinter]
root_packages = ["core", "cardioseg", "cardioview"]

[[tool.importlinter.contracts]]
name = "core is an independent kernel (imports neither cardioseg nor cardioview)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["cardioseg", "cardioview"]

[[tool.importlinter.contracts]]
name = "cardioview depends only on core (never the trainer)"
type = "forbidden"
source_modules = ["cardioview"]
forbidden_modules = ["cardioseg"]

# The store's read/query surface stays preprocessing-free: `query` (DataCfg, load_arrays, MetaBuilder…)
# must not import the N4/Nyúl pipeline. Normalization is a DOWNSTREAM stage (`build`/`normalize` own it),
# so read-only consumers never transitively drag it. The N4Cfg *config* is fine (co-located in n4.py);
# this forbids the pipeline LOGIC modules only. bd cardiac-seg-4hdt.
[[tool.importlinter.contracts]]
name = "store read surface (query) is preprocessing-free (normalization is a downstream stage)"
type = "forbidden"
source_modules = ["core.data.static.store.query"]
forbidden_modules = ["core.preprocessing.preprocess", "core.preprocessing.nyul"]

# torch's CUDA build lives on the PyTorch index, not PyPI. Pin it there explicitly so uv resolves the
# cu130 wheel (both Windows + Linux have the RTX 5090) instead of the CPU build. `explicit` = only
# packages pinned via [tool.uv.sources] draw from this index.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "cardioseg*"]
